--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="Create New Trip"
         android:id="@+id/button1"
-        android:onClick="newtrip"
+        android:onClick="new_trip"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
@@ -35,9 +35,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText2"
+        android:paddingBottom="24dp"
         android:hint="Destination"
+        android:layout_above="@+id/editText6"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -45,12 +46,12 @@
         android:layout_height="wrap_content"
         android:inputType="date"
         android:ems="10"
+        android:paddingBottom="24dp"
         android:id="@+id/editText3"
-        android:layout_below="@+id/editText2"
+        android:hint="Start Date(MM/DD/YYYY)"
+        android:layout_above="@+id/editText4"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="44dp"
-        android:layout_alignParentEnd="true"
-        android:hint="Start Date(MM/DD/YYYY)" />
+        android:layout_alignEnd="@+id/editText4" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -58,31 +59,42 @@
         android:inputType="date"
         android:ems="10"
         android:id="@+id/editText4"
-        android:layout_below="@+id/editText3"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="39dp"
+        android:paddingBottom="24dp"
+        android:hint="End Date(MM/DD/YYYY)"
+        android:layout_above="@+id/editText5"
         android:layout_alignParentEnd="true"
-        android:hint="End Date(MM/DD/YYYY)" />
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText5"
-        android:layout_below="@+id/editText4"
+        android:paddingBottom="24dp"
+        android:hint="Budget"
+        android:layout_above="@+id/button1"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="46dp"
-        android:layout_alignParentEnd="true"
-        android:hint="Budget" />
+        android:layout_marginBottom="31dp"
+        android:layout_alignEnd="@+id/button1" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText7"
+        android:paddingBottom="24dp"
+        android:hint="TripID"
+        android:layout_above="@+id/editText2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText6"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp"
-        android:layout_alignEnd="@+id/button1"
-        android:hint="Remark" />
+        android:paddingBottom="24dp"
+        android:hint="From"
+        android:layout_above="@+id/editText3"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
