--- a/app/src/main/res/layout/activity_login_result.xml
+++ b/app/src/main/res/layout/activity_login_result.xml
@@ -17,7 +17,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.LoginResultActivity">
+    tools:context="com.hp.tripmanager.LoginResultActivity"
+    android:background="@drawable/image">
 
 
     <TextView
