--- a/app/src/main/res/layout/activity_budget_value.xml
+++ b/app/src/main/res/layout/activity_budget_value.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="60dp"
-    tools:context="com.hp.tripmanager.BudgetValueActivity">
+    tools:context="com.hp.tripmanager.BudgetValueActivity"
+    android:background="@drawable/image">
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:paddingBottom="24dp"
-        android:text="DEPARTURE CITY:"
+        android:text="DESTINATION CITY:"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView1"
         android:layout_alignParentStart="true"
