--- a/app/src/main/res/layout/activity_daywise.xml
+++ b/app/src/main/res/layout/activity_daywise.xml
@@ -7,53 +7,59 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.DaywiseActivity">
+    tools:context="com.hp.tripmanager.DaywiseActivity"
+    android:background="@drawable/image">
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
+        android:paddingTop="40dp"
         android:layout_alignParentStart="true"
-        android:id="@+id/tableLayout">
+        android:id="@+id/tableLayout1">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!--  <TextView
-                  android:layout_width="75dp"
-                  android:layout_height="wrap_content"
-                  android:textAppearance="?android:attr/textAppearanceLarge"
-                  android:text="Trip ID"
-                  android:id="@+id/textView1"
-                  android:layout_column="0" />
+        </TableRow>
 
-                 <TextView
-                  android:layout_width="60dp"
-                  android:layout_height="wrap_content"
-                  android:textAppearance="?android:attr/textAppearanceLarge"
-                  android:text="To"
-                  android:id="@+id/textView2"
-                  android:layout_column="1"
-                  android:textAlignment="center" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-              <TextView
-                  android:layout_width="60dp"
-                  android:layout_height="wrap_content"
-                  android:textAppearance="?android:attr/textAppearanceLarge"
-                  android:text="Date"
-                  android:id="@+id/textView2"
-                  android:layout_column="2"
-                  android:textAlignment="center" />
+        </TableRow>
 
-              <TextView
-                  android:layout_width="145dp"
-                  android:layout_height="wrap_content"
-                  android:textAppearance="?android:attr/textAppearanceLarge"
-                  android:text="Amount Spend"
-                  android:id="@+id/textView3"
-                  android:layout_column="3"
-                  android:textAlignment="center" /> -->
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="EID       "
+                android:id="@+id/textView1"
+                android:layout_column="0" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="DATE   "
+                android:id="@+id/textView13"
+                android:layout_column="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="AMOUNT"
+                android:id="@+id/textView14"
+                android:layout_column="2" />
+
         </TableRow>
 
         <TableRow
