--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.ExpenseActivity">
+    tools:context="com.hp.tripmanager.ExpenseActivity"
+    android:background="@drawable/image">
 
     <TableRow
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Choose Category"
-            android:id="@+id/textView2"
+            android:id="@+id/textView1"
             android:layout_column="2" />
     </TableRow>
 
@@ -30,7 +31,30 @@
             android:layout_height="60dp"
             android:id="@+id/spinner1"
             android:hint="Category"
-            android:layout_column="3" />
+            android:layout_column="3"
+            android:clickable="false"
+            android:transitionGroup="false" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Particulars"
+            android:id="@+id/textView3"
+            android:layout_column="2" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText3"
+            android:layout_column="3"
+            android:enabled="true" />
+
     </TableRow>
 
     <TableRow
@@ -46,6 +70,7 @@
             android:layout_span="4" />
     </TableRow>
 
+
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -57,10 +82,10 @@
             android:ems="10"
             android:id="@+id/editText2"
             android:hint="Date of Expense"
-            android:layout_column="0"
-            android:layout_span="4" />
-    </TableRow>
+            android:layout_column="2"
+            android:layout_span="2" />
 
+    </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
@@ -69,9 +94,10 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="add Database"
 
             android:id="@+id/button1"
-            android:layout_column="3" />
+            android:layout_column="3"
+            />
     </TableRow>
 </TableLayout>
