--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.LoginActivity">
+    tools:context="com.hp.tripmanager.LoginActivity"
+    android:background="@drawable/image">
 
 
     <Button
@@ -27,9 +28,9 @@
         android:text="log in"
         android:id="@+id/button1"
         android:onClick="login"
-        android:layout_above="@+id/button2"
+        android:layout_marginBottom="67dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="56dp"
         android:layout_alignParentEnd="true" />
 
     <TextView
@@ -41,21 +42,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign up"
-        android:id="@+id/button2"
-        android:onClick="signup"
-        android:layout_marginBottom="63dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText1"
+        android:id="@+id/editText2"
         android:layout_below="@+id/textView1"
         android:layout_alignParentStart="true"
         android:layout_marginTop="63dp"
@@ -65,10 +55,11 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
         android:id="@+id/editText2"
-        android:layout_above="@+id/button1"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="41dp"
         android:layout_alignParentEnd="true"
         android:hint="Password" />
 
