--- a/app/src/main/res/layout/activity_radio.xml
+++ b/app/src/main/res/layout/activity_radio.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.RadioActivity">
+    tools:context="com.hp.tripmanager.RadioActivity"
+    android:background="@drawable/image">
 
     <TextView
         android:layout_width="wrap_content"
