--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.SignupActivity">
+    tools:context="com.hp.tripmanager.SignupActivity"
+    android:background="@drawable/image">
 
     <EditText
         android:layout_width="match_parent"
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
-        android:hint="Phone Number"
+        android:hint="Mobile Number"
         android:id="@+id/editTextPhone" />
 
     <EditText
