--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.AboutActivity"
-    android:background="@drawable/image">
+    tools:context="com.hp.tripmanager.StartScreen"
+    android:background="@drawable/im">
 
 </RelativeLayout>
