--- a/app/src/main/res/layout/activity_tripwise.xml
+++ b/app/src/main/res/layout/activity_tripwise.xml
@@ -7,6 +7,59 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hp.tripmanager.TripwiseActivity">
+    tools:context="com.hp.tripmanager.TripwiseActivity"
+    android:background="@drawable/image">
 
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="40dp"
+
+        android:layout_alignParentTop="true"
+        android:id="@+id/tableLayout1"
+        >
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="EID  "
+                android:id="@+id/textView8"
+                android:layout_column="0" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="TID  "
+                android:id="@+id/textView9"
+                android:layout_column="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Category  "
+                android:id="@+id/textView10"
+                android:layout_column="2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Particular "
+                android:id="@+id/textView11"
+                android:layout_column="3" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Amt"
+                android:id="@+id/textView12"
+                android:layout_column="4" />
+        </TableRow>
+    </TableLayout>
 </RelativeLayout>
