--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hp.tripmanager.ViewAllActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/image">
 
     <LinearLayout
         android:orientation="horizontal"
