--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,15 +9,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="61dp"
+        android:id="@+id/imageView1"
+        android:src="@mipmap/trip_icon" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="User"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="      Anisha"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/textView1" />
 
 
 </LinearLayout>
