--- a/app/src/main/res/layout/activity_update_delete.xml
+++ b/app/src/main/res/layout/activity_update_delete.xml
@@ -19,16 +19,27 @@
         android:id="@+id/textView1"
         android:paddingTop="30dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="84dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Okay"
+        android:id="@+id/button1"
+        android:layout_below="@+id/radioGroup1"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="65dp"
         android:layout_alignParentStart="true" />
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:id="@+id/radioGroup1"
         android:layout_below="@+id/textView1"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/radioGroup1">
+        android:layout_alignEnd="@+id/textView1">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -42,16 +53,10 @@
             android:layout_height="wrap_content"
             android:text="Delete"
             android:id="@+id/radioButton2"
-            android:checked="false" />
+            android:checked="false"
+            android:layout_below="@+id/radioGroup1"
+            android:layout_alignParentStart="true" />
+
     </RadioGroup>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Okay"
-        android:id="@+id/button1"
-        android:layout_below="@+id/radioGroup1"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="127dp"
-        android:layout_alignEnd="@+id/radioGroup1" />
 </RelativeLayout>
